--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
     <section class="feature_area">
         <div class="container">
             <div class="c_title">
-                <img src="img/icon/title-icon.png" alt="">
+                <img src="{% static 'img/icon/title-icon.png' %}" alt="">
                 <h6>Discover the features</h6>
                 <h2>We are young but bold</h2>
             </div>
@@ -102,7 +102,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="feature_item">
                         <div class="f_icon">
-                            <img src="img/icon/f-icon-1.png" alt="">
+                            <img src="{% static 'img/icon/f-icon-1.png' %}" alt="">
                         </div>
                         <h4>Brand Identity</h4>
                         <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus
@@ -113,7 +113,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="feature_item">
                         <div class="f_icon">
-                            <img src="img/icon/f-icon-2.png" alt="">
+                            <img src="{% static 'img/icon/f-icon-2.png' %}" alt="">
                         </div>
                         <h4>Online Marketing</h4>
                         <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus
@@ -124,7 +124,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="feature_item">
                         <div class="f_icon">
-                            <img src="img/icon/f-icon-3.png" alt="">
+                            <img src="{% static 'img/icon/f-icon-3.png' %}" alt="">
                         </div>
                         <h4>Social Media</h4>
                         <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus
@@ -146,7 +146,7 @@
                         Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
                         sit am et tellus.</p>
                     <div class="media">
-                        <img src="img/team/people/people-5.jpg" alt="">
+                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
                         <div class="media-body">
                             <h5>Chriss Turner</h5>
                             <h6>CEO Enterprise</h6>
@@ -159,7 +159,7 @@
                         Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
                         sit am et tellus.</p>
                     <div class="media">
-                        <img src="img/team/people/people-5.jpg" alt="">
+                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
                         <div class="media-body">
                             <h5>Chriss Turner</h5>
                             <h6>CEO Enterprise</h6>
@@ -172,7 +172,7 @@
                         Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
                         sit am et tellus.</p>
                     <div class="media">
-                        <img src="img/team/people/people-5.jpg" alt="">
+                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
                         <div class="media-body">
                             <h5>Chriss Turner</h5>
                             <h6>CEO Enterprise</h6>
@@ -185,7 +185,7 @@
             <div class="right_text_inner">
                 <div class="text_3d">
                     <div class="l_title">
-                        <img src="img/icon/title-icon.png" alt="">
+                        <img src="{% static 'img/icon/title-icon.png' %}" alt="">
                         <h6>Discover the features</h6>
                         <h2>We don’t hide, we stand tall in front of chalenge</h2>
                     </div>
@@ -196,7 +196,7 @@
                         pellentesque elit vitae eros dignissim ultrices. </p>
                 </div>
                 <div class="shap_mobile">
-                    <img src="img/iphone4.png" alt="">
+                    <img src="{% static 'img/iphone4.png' %}" alt="">
                 </div>
             </div>
         </div>
@@ -209,7 +209,7 @@
                 <div class="col-lg-6">
                     <div class="team_people_text">
                         <div class="l_title">
-                            <img src="img/icon/title-icon.png" alt="">
+                            <img src="{% static 'img/icon/title-icon.png' %}" alt="">
                             <h6>Discover the features</h6>
                             <h2>We build a strong team of great people</h2>
                         </div>
@@ -230,22 +230,22 @@
                         <div class="row">
                             <div class="col-lg-6 col-6">
                                 <div class="team_img_item">
-                                    <img src="img/team/people/people-1.jpg" alt="">
+                                    <img src="{% static 'img/team/people/people-1.jpg' %}" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-6">
                                 <div class="team_img_item">
-                                    <img src="img/team/people/people-2.jpg" alt="">
+                                    <img src="{% static 'img/team/people/people-2.jpg' %}" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-6">
                                 <div class="team_img_item">
-                                    <img src="img/team/people/people-3.jpg" alt="">
+                                    <img src="{% static 'img/team/people/people-3.jpg' %}" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-6">
                                 <div class="team_img_item">
-                                    <img src="img/team/people/people-4.jpg" alt="">
+                                    <img src="{% static 'img/team/people/people-4.jpg' %}" alt="">
                                 </div>
                             </div>
                         </div>
@@ -260,21 +260,19 @@
         <div class="container">
             <div class="row get_touch_inner">
                 <div class="col-lg-6">
-                    <form class="contact_us_form row"
-                          action="https://preview.colorlib.com/theme/sierra/contact_process.php" method="post"
-                          id="contactForm" novalidate="novalidate">
+                    <form class="contact_us_form row" method="post" id="contactForm" novalidate="novalidate">
+                        {% csrf_token %}
                         <div class="form-group col-lg-6">
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                            {{ form.name }}
                         </div>
                         <div class="form-group col-lg-6">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+                            {{ form.email }}
                         </div>
                         <div class="form-group col-lg-12">
-                            <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject*">
+                            {{ form.subject }}
                         </div>
                         <div class="form-group col-lg-12">
-                            <textarea class="form-control" name="message" id="message" rows="1"
-                                      placeholder="Message"></textarea>
+                            {{ form.message }}
                         </div>
                         <div class="form-group col-lg-12">
                             <button type="submit" value="submit" class="btn submit_btn form-control">Send</button>
@@ -284,14 +282,13 @@
                 <div class="col-lg-6">
                     <div class="touch_details">
                         <div class="l_title">
-                            <img src="img/icon/title-icon.png" alt="">
+                            <img src="{% static 'img/icon/title-icon.png' %}" alt="">
                             <h6>Say hello</h6>
-                            <h2>Get in touch, send us an e-mail or call us</h2>
+                            <h2>Bog'lanish bizga email junating yoki qo'ng'iroq qiling!</h2>
                         </div>
-                        <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel
-                            suscipit dolor. Donec elementum velit a orci facilisis rutrum.</p>
-                        <a href="#"><h5>Call us now</h5></a>
-                        <a href="#"><h4>+452373 95593 232</h4></a>
+                        <p>Sa</p>
+                        <a href="tel:+998911219015"><h5>Bizga qo'ng'iroq qiling</h5></a>
+                        <a href="tel:+998911219015"><h4>+998 91 121 90 15</h4></a>
                     </div>
                 </div>
             </div>
@@ -302,11 +299,11 @@
     <section class="world_map_area p_100">
         <div class="container">
             <div class="world_map_inner">
-                <img class="img-fluid" src="img/world-map.png" alt="">
+                <img class="img-fluid" src="{% static 'img/world-map.png' %}" alt="">
                 <div class="bd-callout">
                     <h3>Gibraltar Office</h3>
                     <p>Casemates Square, no253 <br/> United kingdom</p>
-                    <h4><a href="#">+453678 9283 559</a> <a href="#"><span class="__cf_email__"
+                    <h4><a href="#">+453678 9283 559</a> <a href="/"><span class="__cf_email__"
                                                                            data-cfemail="8be8e4e5ffeae8ffcbffeee6fbe7eaffeea5e8e4e6">[email&#160;protected]</span></a>
                     </h4>
                 </div>
