--- a/templates/index.html
+++ b/templates/index.html
@@ -140,45 +140,19 @@
     <section class="best_3d_area">
         <div class="left_3d">
             <div class="shap_slider_inner owl-carousel">
-                <div class="item">
-                    <h4>“They are the best”</h4>
-                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.
-                        Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
-                        sit am et tellus.</p>
-                    <div class="media">
-                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
-                        <div class="media-body">
-                            <h5>Chriss Turner</h5>
-                            <h6>CEO Enterprise</h6>
+                {% for i in team %}
+                    <div class="item">
+                        <h4>“{{ i.stata }}”</h4>
+                        <p>{{ i.stata_description }}</p>
+                        <div class="media">
+                            <img src="{{ i.image.url }}" alt="">
+                            <div class="media-body">
+                                <h5>{{ i.name }}</h5>
+                                <h6>{{ i.profession }}</h6>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="item">
-                    <h4>“They are the best”</h4>
-                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.
-                        Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
-                        sit am et tellus.</p>
-                    <div class="media">
-                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
-                        <div class="media-body">
-                            <h5>Chriss Turner</h5>
-                            <h6>CEO Enterprise</h6>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <h4>“They are the best”</h4>
-                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit.
-                        Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque
-                        sit am et tellus.</p>
-                    <div class="media">
-                        <img src="{% static 'img/team/people/people-5.jpg' %}" alt="">
-                        <div class="media-body">
-                            <h5>Chriss Turner</h5>
-                            <h6>CEO Enterprise</h6>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
         <div class="right_text">
@@ -197,59 +171,6 @@
                 </div>
                 <div class="shap_mobile">
                     <img src="{% static 'img/iphone4.png' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section class="team_people_area">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="team_people_text">
-                        <div class="l_title">
-                            <img src="{% static 'img/icon/title-icon.png' %}" alt="">
-                            <h6>Discover the features</h6>
-                            <h2>We build a strong team of great people</h2>
-                        </div>
-                        <p>Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel
-                            suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id
-                            dictum. Sed ut risus in orci convallis viverra.</p>
-                        <ul>
-                            <li><a href="#">Nunc nec maximus dui, </a></li>
-                            <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                            <li><a href="#">Aenean pellentesque elit vitae</a></li>
-                            <li><a href="#">Ex mauris, ornare eget pretium </a></li>
-                            <li><a href="#">Cras ex mauris, ornare eget preti</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="team_img_inner">
-                        <div class="row">
-                            <div class="col-lg-6 col-6">
-                                <div class="team_img_item">
-                                    <img src="{% static 'img/team/people/people-1.jpg' %}" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-6">
-                                <div class="team_img_item">
-                                    <img src="{% static 'img/team/people/people-2.jpg' %}" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-6">
-                                <div class="team_img_item">
-                                    <img src="{% static 'img/team/people/people-3.jpg' %}" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6 col-6">
-                                <div class="team_img_item">
-                                    <img src="{% static 'img/team/people/people-4.jpg' %}" alt="">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -301,7 +222,7 @@
             <div class="world_map_inner">
                 <img class="img-fluid" src="{% static 'img/world-map.png' %}" alt="">
                 <div class="bd-callout">
-                    <h3>Gibraltar Office</h3>
+                    <h3>Tashkent Office</h3>
                     <p>Casemates Square, no253 <br/> United kingdom</p>
                     <h4><a href="#">+453678 9283 559</a> <a href="/"><span class="__cf_email__"
                                                                            data-cfemail="8be8e4e5ffeae8ffcbffeee6fbe7eaffeea5e8e4e6">[email&#160;protected]</span></a>
